--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: content: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <title>Monaca Education ダイレクトプレビュー</title>
-    <script src="components/loader.js"></script><link rel="stylesheet" href="components/loader.css">
+    <script src="/loader.js"></script><link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
    integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
    crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
    crossorigin="" defer></script>
-    <link rel="stylesheet" href="css/style.css"><script src="js/education.js" defer></script><script src="js/config.js" defer></script><script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="/style.css"><script src="/education.js" defer></script><script src="/config.js" defer></script><script src="js/main.js" defer></script>
  <script>
 </script>
 </head>
@@ -61,4 +61,5 @@
     button.addEventListener('click', butotnClick);
 
 </script>
+
 </html>
