--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
    crossorigin="" defer></script>
-    <link rel="stylesheet" href="style.css"><script src="education.js" defer></script><script src="config.js" defer></script><script src="jsmain.js" defer></script>
+    <link rel="stylesheet" href="templates/style.css"><script src="education.js" defer></script><script src="config.js" defer></script><script src="templates/main.js" defer></script>
  <script>
 </script>
 </head>
@@ -63,4 +63,5 @@
 </script>
 
 </html>
+
 
