--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: content: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <title>Monaca Education ダイレクトプレビュー</title>
-    <script src="components/loader.js"></script><link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
    integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
    crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
    crossorigin="" defer></script>
-    <link rel="stylesheet" href="style.css"><script src="main.js" defer></script>
+    <link rel="stylesheet" href="css/style.css"><script src="js/education.js" defer></script><script src="js/config.js" defer></script><script src="js/main.js" defer></script>
  <script>
 </script>
 </head>
@@ -20,8 +19,8 @@
     <div id="map"></div>
     <h1>手伝いを呼びかける</h1>
     
-    <select name="old">
-        <option value="nenrei" selected>年齢を選択してください</option>
+    <p>年齢：<select id="old">
+        <option value="nenrei" selected>選択してください</option>
         <option value="10">10代</option>
         <option value="20">20代</option>
         <option value="30">30代</option>
@@ -32,34 +31,42 @@
         <option value="80">80代</option>
         <option value="90">90代</option>
         <option value="100">100代以降</option>
-    </select>
-    <select name="gender">
-        <option value="seibetu" selected>性別を選択してください</option>
+    </select></p>
+    <p>性別：<select id="gender">
+        <option value="seibetu" selected>選択してください</option>
         <option value="male">男性</option>
         <option value="female">女性</option>
         <option value="others">その他</option>
-    <input type="text" id="tytle" placeholder="募集タイトル" class="tytle">
-    <input type="text" id="naiyo" placeholder="募集内容" class="naiyo"><br>
+    </select></p>
+    <p>タイトル：<select id="title">
+        <option value="taitoru" selected>選択してください</option>
+        <option value="carry">荷物運び</option>
+        <option value="annai">道案内</option>
+        <option value="hand">家の手伝い</option>
+        <option value="gerbage">ごみ捨て</option>
+        <option value="others">その他</option>
+    </select></p>
+    <p>募集内容(任意)：
+    <input type="text" id="naiyo" placeholder="募集内容" class="naiyo"></p>
     <button id="btn">募集する</button>
-
-
-
 </body>
 <script>
     function butotnClick(){
-        const selectOld = document.getElementById('old');
-        const selectGender = document.getElementById('gender');
-        const textTitle = document.getElementById('title');
-        const textNaiyo = document.getElementById('naiyo');
         const marker = L.marker([35.70062558129799, 139.49990618891738]).addTo(map);
         marker.bindPopup(`
-            <button> 詳細 </button>
+            <button id="shosai"> 詳細 </button>
         `);
     };
 
+    function hyouji(){
+        alert();
+    }
+    
     let button = document.getElementById('btn');
     button.addEventListener('click', butotnClick);
+    let shosai = document.getElementById('shosai');
+    button.addEventListener('click', hyouji)
 
 </script>
-
 </html>
+
