--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ログイン画面</title>
-</head>
-<body>
-    <h2>ログイン</h2>
-    <form action="{{ url_for('login') }}" method="post">
-        <label for="username">ユーザー名:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">パスワード:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="ログイン">
-    </form>
-    <br>
-    <a href="{{ url_for('register') }}">新規登録はこちら</a>
-</body>
-</html>
+<form action="/login" method="POST">
+    <h2>Login</h2>
+    <input name="username" placeholder="Username">
+    <input name="password" type="password" placeholder="Password">
+    <button type="submit">Login</button>
+</form>
+
+<a href="/register">Register</a>
