--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,12 @@
-<form action="/login" method="POST">
+<!DOCTYPE html>
+<html>
+<body>
     <h2>Login</h2>
-    <input name="username" placeholder="Username">
-    <input name="password" type="password" placeholder="Password">
-    <button type="submit">Login</button>
-</form>
-
-<a href="/register">Register</a>
+    <form action="/login" method="POST">
+        <input name="username" placeholder="Username"><br>
+        <input name="password" type="password" placeholder="Password"><br>
+        <button type="submit">Login</button>
+    </form>
+    <a href="/register">Register</a>
+</body>
+</html>
