--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,11 @@
-<form action="/register" method="POST">
+<!DOCTYPE html>
+<html>
+<body>
     <h2>Register</h2>
-    <input name="username" placeholder="Username">
-    <input name="password" type="password" placeholder="Password">
-    <button type="submit">Register</button>
-</form>
+    <form action="/register" method="POST">
+        <input name="username" placeholder="Username"><br>
+        <input name="password" type="password" placeholder="Password"><br>
+        <button type="submit">Register</button>
+    </form>
+</body>
+</html>
