--- a/templates/result.html
+++ b/templates/result.html
@@ -1,2 +1,7 @@
-<h2>{{ message }}</h2>
-<a href="/">Back</a>
+<!DOCTYPE html>
+<html>
+<body>
+    <h2>{{ message }}</h2>
+    <a href="/">Back</a>
+</body>
+</html>
