--- a/templates/index.html
+++ b/templates/index.html
@@ -31,16 +31,11 @@
     <p>年齢：
         <select id="old">
             <option value="" selected>選択してください</option>
-            <option value="10代">10代</option>
-            <option value="20代">20代</option>
-            <option value="30代">30代</option>
-            <option value="40代">40代</option>
             <option value="50代">50代</option>
             <option value="60代">60代</option>
             <option value="70代">70代</option>
             <option value="80代">80代</option>
-            <option value="90代">90代</option>
-            <option value="100代以降">100代以降</option>
+            <option value="90代">90代以降</option>
         </select>
     </p>
 
@@ -137,6 +132,7 @@
     </script>
 </body>
 </html>
+
 
 
 
