--- a/templates/index.html
+++ b/templates/index.html
@@ -130,13 +130,14 @@
         }
 
         function doshonin(){
-            alert("aiueo")
+            alert("aiue")
         }
 
         document.getElementById("btn").addEventListener("click", buttonClick);
     </script>
 </body>
 </html>
+
 
 
 
