--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
                     <p><b>性別：</b>${gender}</p>
                     <p><b>タイトル：</b>${title}</p>
                     <p><b>内容：</b>${naiyo}</p>
-                    <button id="shonin"></button>
+                    <button id="shonin">承認する</button>
                 </div>
             `);
 
@@ -137,6 +137,7 @@
     </script>
 </body>
 </html>
+
 
 
 
