--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
             margin: 10px;
         }
         #btn { margin-left: 10px; margin-top: 20px; font-size: 20px; }
+        #shonin {font-size: 16px;}
     </style>
 </head>
 
@@ -137,6 +138,7 @@
     </script>
 </body>
 </html>
+
 
 
 
