--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
                     <p><b>性別：</b>${gender}</p>
                     <p><b>タイトル：</b>${title}</p>
                     <p><b>内容：</b>${naiyo}</p>
-                    <button id="shonin">承認する</button>
+                    <input type=button id="shonin" value="承認する">
                 </div>
             `);
 
@@ -129,6 +129,7 @@
     </script>
 </body>
 </html>
+
 
 
 
