--- a/templates/index.html
+++ b/templates/index.html
@@ -116,11 +116,11 @@
                 </div>
             `);
 
-        var shonin = document.getElementById(shoninbtn);
+        /*var shonin = document.getElementById(shoninbtn);
         var color = function(){
             marker.setIcon(redIcon);
         }
-        shonin.onclick = color;
+        shonin.onclick = color;*/
 
 
             map.setView([lat, lng], 16);
@@ -134,6 +134,7 @@
     </script>
 </body>
 </html>
+
 
 
 
