Fix HTML encoding issues in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
                     <p><b>性別：</b>${gender}</p>
                     <p><b>タイトル：</b>${title}</p>
                     <p><b>内容：</b>${naiyo}</p>
-                    <input type=button id="shoninbtn" value="承認する">
+                    <button id="shoninbtn>承認する</button>
                 </div>
             `);
 
@@ -134,6 +134,7 @@
     </script>
 </body>
 </html>
+
 
 
 
