--- a/templates/index.html
+++ b/templates/index.html
@@ -112,9 +112,7 @@
                     <p><b>性別：</b>${gender}</p>
                     <p><b>タイトル：</b>${title}</p>
                     <p><b>内容：</b>${naiyo}</p>
-                    <button id="shoninbtn>承認する</button>
-                </div>
-            `);
+                    <p><b><button id="shoninbtn>承認する</button></p>
 
         /*var shonin = document.getElementById(shoninbtn);
         var color = function(){
@@ -134,6 +132,7 @@
     </script>
 </body>
 </html>
+
 
 
 
