--- a/templates/index.html
+++ b/templates/index.html
@@ -112,13 +112,13 @@
                     <p><b>性別：</b>${gender}</p>
                     <p><b>タイトル：</b>${title}</p>
                     <p><b>内容：</b>${naiyo}</p>
-                    <p><b><button id="shoninbtn>承認する</button></p>
+                    <button id="shoninbtn>承認する</button>
 
-        /*var shonin = document.getElementById(shoninbtn);
+        var shonin = document.getElementById(shoninbtn);
         var color = function(){
             marker.setIcon(redIcon);
         }
-        shonin.onclick = color;*/
+        shonin.onclick = color;
 
 
             map.setView([lat, lng], 16);
@@ -132,6 +132,7 @@
     </script>
 </body>
 </html>
+
 
 
 
