--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
                     <p><b>性別：</b>${gender}</p>
                     <p><b>タイトル：</b>${title}</p>
                     <p><b>内容：</b>${naiyo}</p>
-                    <button id="shoninbtn>承認する</button>
+                    <button type=button id="shoninbtn value="承認する">
 
         var shonin = document.getElementById(shoninbtn);
         var color = function(){
@@ -132,6 +132,7 @@
     </script>
 </body>
 </html>
+
 
 
 
