--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,8 @@
                     <p><b>タイトル：</b>${title}</p>
                     <p><b>内容：</b>${naiyo}</p>
                     <button type=button id=shoninbtn value="承認する">
+                </div>
+            `)
 
         var shonin = document.getElementById(shoninbtn);
         var color = function(){
@@ -132,6 +134,7 @@
     </script>
 </body>
 </html>
+
 
 
 
