--- a/templates/index.html
+++ b/templates/index.html
@@ -112,15 +112,15 @@
                     <p><b>性別：</b>${gender}</p>
                     <p><b>タイトル：</b>${title}</p>
                     <p><b>内容：</b>${naiyo}</p>
-                    <button type=button id=shoninbtn value="承認する">
+                    <button type=button id=shoninbtn>承認する</button>
                 </div>
             `)
 
-        var shonin = document.getElementById(shoninbtn);
-        var color = function(){
-            marker.setIcon(redIcon);
-        }
-        shonin.onclick = color;
+            var shonin = document.getElementById(shoninbtn);
+            var color = function(){
+                marker.setIcon(redIcon);
+            }
+            shonin.onclick = color;
 
 
             map.setView([lat, lng], 16);
@@ -134,6 +134,7 @@
     </script>
 </body>
 </html>
+
 
 
 
