--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
 
             var shonin = document.getElementById(shoninbtn);
             var color = function(){
-                marker.setIcon(redIcon);
+                button.value="承認取り消し"
             }
             shonin.onclick = color;
 
@@ -134,27 +134,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
