--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
 
             var shonin = document.getElementById(shoninbtn);
             var color = function(){
-                button.value="承認取り消し"
+                button.value="承認取り消し";
             }
             shonin.onclick = color;
 
@@ -134,3 +134,4 @@
     </script>
 </body>
 </html>
+
